import java.util.*;



/** Finds shortest path between student and student who interned at a specific company */
public class ReferralPathFinder {

    StudentGraph graph;

    /** Constructor for ReferralPathFinder with input of StudentGraph */
    public ReferralPathFinder(StudentGraph graph) {
        // Constructor
    }

    /**
     * Outputs list of UniversityStudent objects from StudentGraph that form the
     * shortest path of connections between UniversityStudent start and a student
     * who worked at targetCompany using Dijkstra's algorithm
     */
    public List<UniversityStudent> findReferralPath(UniversityStudent start, String targetCompany) {
        // Method signature only
        return new ArrayList<>();
    }
}
